--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@middy/core": "^1.5.2",
     "@middy/http-json-body-parser": "^1.5.2",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
+    "eslint": "^7.23.0",
     "source-map-support": "^0.5.19"
   },
   "devDependencies": {
