--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,8 @@
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "eslint": "^7.23.0",
+    "eslint-config-prettier": "^8.1.0",
+    "prettier": "^2.2.1",
     "source-map-support": "^0.5.19"
   },
   "devDependencies": {
