feat(*): prettierフォーマット設定

--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,9 @@
   "description": "Serverless aws-nodejs-typescript template",
   "main": "serverless.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "prettier:fix": "prettier --write ."
   },
   "engines": {
     "node": ">=14.15.0"
